--- a/packages/ds-react/package.json
+++ b/packages/ds-react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zodiac-ui-ds-react",
+  "name": "@zodiac-ui/ds-react",
   "version": "1.0.5-alpha.0",
   "description": "React portability of Zodicac-UI Design System",
   "author": "Henrique Dal' Mora <hdalmora.dev@gmail.com>",
